Fixed overflow in the mobile ham

--- a/src/Styles/Hamburger.module.css
+++ b/src/Styles/Hamburger.module.css
@@ -57,6 +57,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  overflow: hidden;
 }
 
 .mobileLinks {
